--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,18 +30,17 @@
                     <button id="name">Anil Yadav</button>
                 </div>
                 <div id="animated-bio">
-                    <h2>I am Software Engineer</h2>
+                    <h2>I am <span></span></h2>
                 </div>
                 <div id="para">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta distinctio perspiciatis amet aut voluptate veritatis temporibus voluptatibus harum porro consequatur, soluta et.
-                    </p>
+                    <p>Creative software engineer with expertise in frontend and backend development, passionate about building responsive, user-friendly web applications and systems.</p>
                 </div>
                 <div class="btns">
                     <button id="together">Work Together</button>
                     <button id="explore">Explore</button>
                 </div>
                 <div id="icons">
-                    <li><a href="#"><i  class="fa-brands fa-github"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-upwork"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-telegram"></i></a></li>
