added animated profile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="home-profile">
-
+                <div class="image"><img src="assets/—Pngtree—3d a business man stand_15446936.png" alt=""></div>
             </div>
         </div>
         <div class="about"></div>
