--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </div>
-            <button id="download-cv">Download CV</button>
+            <button id="download-cv"><span>Download CV</span> <i class="fa-regular fa-file"></i></button>
         </div>
         <div class="home" id="home-section">
             <div class="home-content">
