contact section added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
             </div>
             <button id="download-cv"><span>Download CV</span> <i class="fa-regular fa-file"></i></button>
         </div>
-        <div class="home" id="home-section">
+        <!-- <div class="home" id="home-section">
             <div class="home-content">
                 <div id="logo">
                     <button id="name">Anil Yadav</button>
@@ -107,8 +107,15 @@
             <button id="read-more">Read More</button>
         </div>
     </div>
+    </div> -->
+    <div class="contact">
+        <div class="contact-me">
+            <h2>Contact Me</h2>
+            <span><i class="fa-regular fa-envelope"></i> : rebelanil885@gmail.com</span>
+            <span><i class="fa-solid fa-phone"></i>Tel: +918125305482</span>
+        </div>
+        <div class="send-info">send info</div>
     </div>
-    <div class="contact"></div>
     </div>
     <script src="app.js"></script>
 </body>
