contact section pushed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
             </div>
             <button id="download-cv"><span>Download CV</span> <i class="fa-regular fa-file"></i></button>
         </div>
-        <!-- <div class="home" id="home-section">
+        <div class="home animate-on-scroll" id="home-section">
             <div class="home-content">
                 <div id="logo">
                     <button id="name">Anil Yadav</button>
@@ -53,7 +53,7 @@
                 <div class="image"><img src="assets/—Pngtree—3d a business man stand_15446936.png" alt=""></div>
             </div>
         </div> 
-        <div class="projects fade-in fade-out" id="project-section">
+        <div class="projects animate-on-scroll" id="project-section">
             <span>Projects</span>
             <div class="proj-con">
                 <div class="project">
@@ -85,7 +85,7 @@
     </div>
     </div>
     </div>
-    <div class="service fade-in fade-out">
+    <div class="service animate-on-scroll">
         <h1>Our Services</h1>
     <div class="services-box">
         <div class="box">
@@ -107,15 +107,28 @@
             <button id="read-more">Read More</button>
         </div>
     </div>
-    </div> -->
-    <div class="contact">
-        <div class="contact-me">
-            <h2>Contact Me</h2>
-            <span><i class="fa-regular fa-envelope"></i> : rebelanil885@gmail.com</span>
-            <span><i class="fa-solid fa-phone"></i>Tel: +918125305482</span>
-        </div>
-        <div class="send-info">send info</div>
     </div>
+        <div class="contact animate-on-scroll">
+            <div class="contact-me">
+                <h2>Contact Me</h2>
+                <span><i class="fa-regular fa-envelope"></i> : rebelanil885@gmail.com</span>
+                <span><i class="fa-solid fa-phone"></i>Tel: +918125305482</span>
+            </div>
+            <div class="send-info">
+                <form action="/register">
+                    <div class="form-name">
+                        <input type="text" placeholder="Name">
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <div class="msg">
+                        <textarea name="" id="" placeholder="Send Your Thoughts"></textarea>
+                    </div>
+                    <div class="btn">
+                        <button id="submit">Send Details</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
