scroll animation added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
             </div>
             <button id="download-cv"><span>Download CV</span> <i class="fa-regular fa-file"></i></button>
         </div>
-        <div class="home animate-on-scroll" id="home-section">
+        <div class="home" id="home-section">
             <div class="home-content">
                 <div id="logo">
                     <button id="name">Anil Yadav</button>
