about secsiton added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
             </div>
             <button id="download-cv"><span>Download CV</span> <i class="fa-regular fa-file"></i></button>
         </div>
-        <div class="home" id="home-section">
+        <div class="home " id="home-section">
             <div class="home-content">
                 <div id="logo">
                     <button id="name">Anil Yadav</button>
@@ -36,7 +36,8 @@
                     <h2>I am <span></span></h2>
                 </div>
                 <div id="para">
-                    <p>Creative software engineer with expertise in frontend and backend development, passionate about building responsive, user-friendly web applications and systems.</p>
+                    <p>Creative software engineer with expertise in frontend and backend development, passionate about
+                        building responsive, user-friendly web applications and systems.</p>
                 </div>
                 <div class="btns">
                     <button id="together">Work Together</button>
@@ -52,9 +53,34 @@
             <div class="home-profile">
                 <div class="image"><img src="assets/—Pngtree—3d a business man stand_15446936.png" alt=""></div>
             </div>
-        </div> 
+        </div>
+
+        <div class="about">
+            <div class="about animate-on-scroll">
+                <section class="about-section">
+                  <div class="bio">
+                    <h2>About Me</h2>
+                    <p>Hello! I'm Anil Yadav, a passionate full-stack developer from Nepal. I specialize in building dynamic, responsive web applications using modern technologies. I love learning new things and am constantly expanding my skill set in both frontend and backend development.</p>
+                    <p>With a deep knowledge of frontend development (HTML, CSS, JavaScript, React), I also enjoy backend work using Node.js and MongoDB for database management.</p>
+                  </div>
+                  <div class="skills">
+                    <h3>Skills</h3>
+                    <div class="skills-icons">
+                      <i class="fab fa-html5"></i>
+                      <i class="fab fa-css3-alt"></i>
+                      <i class="fab fa-js"></i>
+                      <i class="fab fa-bootstrap"></i>
+                      <i class="fab fa-react"></i>
+                      <i class="fab fa-node"></i>
+                      <i class="fas fa-database"></i>
+                    </div>
+                  </div>
+                </section>
+              </div>
+              
+        </div>
         <div class="projects animate-on-scroll" id="project-section">
-            <span>Projects</span>
+            <span>Our Projects</span>
             <div class="proj-con">
                 <div class="project">
                     <div class="blur-container" style="    background: url('https://play-lh.googleusercontent.com/cF84m5Rr_pjRd594Gy7ShkKSIt7AJZBpx9A1Vk2rMKeN-FVUPA_nD7RJu1PKv9gBnw');   background-size: contain;
@@ -82,32 +108,35 @@
     background-repeat: no-repeat;">
                     </div>
                     <button class="showmore">Show more</button>
-    </div>
-    </div>
-    </div>
-    <div class="service animate-on-scroll">
-        <h1>Our Services</h1>
-    <div class="services-box">
-        <div class="box">
-            <i class="fa-solid fa-briefcase"></i>
-            <h2>Planning</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum esse, ullam beatae sit rem?</p>
-            <button id="read-more">Read More</button>
+                </div>
+            </div>
         </div>
-        <div class="box">
-            <i class="fa-solid fa-lightbulb"></i>
-            <h2>Rennovation</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum esse, ullam beatae sit rem?</p>
-            <button id="read-more">Read More</button>
+        <div class="service animate-on-scroll">
+            <h1>Our Services</h1>
+            <div class="services-box">
+                <div class="box">
+                    <i class="fa-solid fa-briefcase"></i>
+                    <h2>Planning</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum esse, ullam beatae sit
+                        rem?</p>
+                    <button id="read-more">Read More</button>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-lightbulb"></i>
+                    <h2>Rennovation</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum esse, ullam beatae sit
+                        rem?</p>
+                    <button id="read-more">Read More</button>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-handshake"></i>
+                    <h2>Support</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum esse, ullam beatae sit
+                        rem?</p>
+                    <button id="read-more">Read More</button>
+                </div>
+            </div>
         </div>
-        <div class="box">
-            <i class="fa-solid fa-handshake"></i>
-            <h2>Support</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum esse, ullam beatae sit rem?</p>
-            <button id="read-more">Read More</button>
-        </div>
-    </div>
-    </div>
         <div class="contact animate-on-scroll">
             <div class="contact-me">
                 <h2>Contact Me</h2>
