--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,16 +22,16 @@
             <div id="nav-list">
                 <li><a href="#home-section">Home</a></li>
                 <li><a href="#project-section">Projects</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#about-section">About</a></li>
+                <li><a href="#contact-section">Contact</a></li>
             </div>
             <button id="download-cv"><span>Download CV</span> <i class="fa-regular fa-file"></i></button>
         </div>
         <div class="home " id="home-section">
             <div class="home-content">
-                <div id="logo">
+                <!-- <div id="logo">
                     <button id="name">Anil Yadav</button>
-                </div>
+                </div> -->
                 <div id="animated-bio">
                     <h2>I am <span></span></h2>
                 </div>
@@ -55,29 +55,29 @@
             </div>
         </div>
 
-        <div class="about">
+        <div class="about" id="about-section">
             <div class="about animate-on-scroll">
                 <section class="about-section">
-                  <div class="bio">
-                    <h2>About Me</h2>
-                    <p>Hello! I'm Anil Yadav, a passionate full-stack developer from Nepal. I specialize in building dynamic, responsive web applications using modern technologies. I love learning new things and am constantly expanding my skill set in both frontend and backend development.</p>
-                    <p>With a deep knowledge of frontend development (HTML, CSS, JavaScript, React), I also enjoy backend work using Node.js and MongoDB for database management.</p>
-                  </div>
-                  <div class="skills">
-                    <h3>Skills</h3>
-                    <div class="skills-icons">
-                      <i class="fab fa-html5"></i>
-                      <i class="fab fa-css3-alt"></i>
-                      <i class="fab fa-js"></i>
-                      <i class="fab fa-bootstrap"></i>
-                      <i class="fab fa-react"></i>
-                      <i class="fab fa-node"></i>
-                      <i class="fas fa-database"></i>
+                    <div class="bio">
+                        <h2>About Me</h2>
+                        <p>Hello! I'm Anil Yadav, a passionate full-stack developer from Nepal. I specialize in building
+                            dynamic, responsive web applications using modern technologies.</p>
                     </div>
-                  </div>
+                    <div class="skills">
+                        <h3>Skills</h3>
+                        <div class="skills-icons">
+                            <i class="fab fa-html5"></i>
+                            <i class="fab fa-css3-alt"></i>
+                            <i class="fab fa-js"></i>
+                            <i class="fab fa-bootstrap"></i>
+                            <i class="fab fa-react"></i>
+                            <i class="fab fa-node"></i>
+                            <i class="fas fa-database"></i>
+                        </div>
+                    </div>
                 </section>
-              </div>
-              
+            </div>
+
         </div>
         <div class="projects animate-on-scroll" id="project-section">
             <span>Our Projects</span>
@@ -111,7 +111,7 @@
                 </div>
             </div>
         </div>
-        <div class="service animate-on-scroll">
+        <div class="service animate-on-scroll" id="service-section">
             <h1>Our Services</h1>
             <div class="services-box">
                 <div class="box">
@@ -137,7 +137,7 @@
                 </div>
             </div>
         </div>
-        <div class="contact animate-on-scroll">
+        <div class="contact animate-on-scroll" id="contact-section">
             <div class="contact-me">
                 <h2>Contact Me</h2>
                 <span><i class="fa-regular fa-envelope"></i> : rebelanil885@gmail.com</span>
@@ -158,7 +158,35 @@
                 </form>
             </div>
         </div>
+        <hr>
+        <div class="footer-section">
+            <div class="brand-moto">
+                <ul style="list-style: none;">
+                    <li><a href="#home-section">Home</a></li>
+                    <li><a href="#project-section">Projects</a></li>
+                    <li><a href="#about-section">About</a></li>
+                    <li><a href="#service-section">Services</a></li>
+                </ul>
+            </div>
+            <div class="info-links">
+                <ul style="list-style: none;">
+                    <li> <i class="fa-solid fa-chevron-right"></i> <a href="#">@anilyadavofficial</a></li>
+                    <li> <i class="fa-solid fa-chevron-right"></i> <a href="#">@anilyadavofficial</a></li>
+                    <li> <i class="fa-solid fa-chevron-right"></i> <a href="#">@anilyadavofficial</a></li>
+                    <li> <i class="fa-solid fa-chevron-right"></i> <a href="#">@anilyadavofficial</a></li>
+                </ul>
+            </div>
+            <div class="connect-us">
+                <ul style="list-style: none;">
+                    <li><a href="#"> <i class="fa-brands fa-whatsapp"></i> <span>8125305482</span></a></li>
+                    <li><a href="#"><i class="fa-brands fa-telegram"></i> <span>AnilYadav</span></a></li>
+                    <li><a href="#"> <i class="fa-brands fa-facebook"></i> <span>@anilydv45</span></a></li>
+                    <li><a href="#"> <i class="fa-solid fa-phone"></i> <span>+4848383</span></a></li>
+                </ul>
+            </div>
+        </div>
     </div>
+    <h2>Copyright <i class="fa-regular fa-copyright"></i> 2024 </h2>
     <script src="app.js"></script>
     <!-- strick mainatain -->
 </body>
